test/expected/large/tenant/Deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    foo.com/duname: tenant
    foo.com/duversion: 1.10.9-20190909.1568068601957
    foo.com/version: 1.10.9
  labels:
    app.kubernetes.io/name: tenant
    helm.sh/chart: tenant-1.10.9
  name: tenant
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: tenant
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: tenant
        app.kubernetes.io/name: tenant
    spec:
      containers:
      - envFrom:
        - configMapRef:
            name: foo-shared-config
        - configMapRef:
            name: foo-java-config
        image: repo.foo.com/va-125.0.0-x64_redhat_linux_7-docker-prod/foo-tenant:1.10.9-20190909.1568068601957
        imagePullPolicy: IfNotPresent
        name: tenant
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        resources: {}
      initContainers:
      - envFrom:
        - configMapRef:
            name: foo-shared-config
        image: docker.foo.com/yesbut/init-blocker:1.7
        name: init-blocker
