test/expected/large/tenant/VirtualService.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  annotations:
    foo.com/duname: tenant
    foo.com/duversion: 1.10.9-20190909.1568068601957
    foo.com/version: 1.10.9
  labels:
    app.kubernetes.io/name: tenant
    helm.sh/chart: tenant-1.10.9
  name: tenant
spec:
  gateways:
  - public-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        exact: /tenant
    - uri:
        prefix: /tenant/
    route:
    - destination:
        host: tenant.peekay.svc.cluster.local
